kauaiworld.com (archived on 2009-06-16)
{
  "alexa_rank": 173179,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 9703,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.27,
  "homepage_snapshot_redirected_domain": "kauaiworld.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090418215159id_/http://www.kauaiworld.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090418215159id_/http%3A//kauaiworld.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "kauaiworld.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616174528id_/http%3A//www.kauaiworld.com/our_newspaper/security",
  "policy_title": "TheGardenIsland.com > Our Newspaper > Security",
  "policy_url": "kauaiworld.com/our_newspaper/security",
  "sha1": "ae445994f117d3e723fb9e20e926c0959aa7b9d7",
  "simhash": 1955718390454509629,
  "simhash_updated": false,
  "site_hostname": "kauaiworld.com",
  "site_url": "http://kauaiworld.com",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20090616174528",
  "word_count": 1597,
  "year": 2009
}

--- a/k/ka/kau/kauaiworld.com.html
+++ b/k/ka/kau/kauaiworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kauaiworld.com privacy policy that was archived on 2008-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081119115902id_/http%3A//www.kauaiworld.com/our_newspaper/security) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kauaiworld.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616174528id_/http%3A//www.kauaiworld.com/our_newspaper/security) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-<script type="text/javascript" src="http://www.kauaiworld.com/shared-content/stats/common/tracker.js"></script>
+<script type="text/javascript" src="http://stats.townnews.com/shared-content/stats/common/tracker.js"></script>
 <script type="text/javascript">
 <!--
- if(typeof(TNStats_Tracker) !== 'undefined' && typeof(TNTracker) === 'undefined') { TNTracker = new TNStats_Tracker('kauaiworld.com'); TNTracker.setTracker('http://www.kauaiworld.com/shared-content/stats/common/tracker.gif', 'https://secure.townnews.com/shared-content/stats/common/tracker.gif'); TNTracker.trackPageView(); }
+ if(typeof(TNStats_Tracker) !== 'undefined' && typeof(TNTracker) === 'undefined') { TNTracker = new TNStats_Tracker('kauaiworld.com'); TNTracker.setTrackerDomain('stats.townnews.com'); TNTracker.trackPageView(); }
 // -->
 </script>
 <a name="top"></a>
@@ -48,19 +48,7 @@ aCampaigns[91] = 100;
 aAds = new Array();
 nAdsysTime = new Date().getTime()/1000;
 document.usePlayer = 1;
-if ((nAdsysTime >= 1167890400) && (nAdsysTime <= 1238648399)) {
-aAd = new Array('+top_leader', '47162-1207117214', 'gif');
-aAd[3] = 'http://www.kauai-realty.com';
-aAd[4] = '0';
-aAd[6] = '1';
-aAd[7] = 10;
-aAd[8] = 0;
-aAd[9] = 91;
-aAd[10] = 0;
-aAd[11] = 0;
-aAds[aAds.length] = aAd;
-}
-if ((nAdsysTime >= 1205989200) && (nAdsysTime <= 1230789599)) {
+if ((nAdsysTime >= 1205971200) && (nAdsysTime <= 1249516799)) {
 aAd = new Array('+top_leader', '55295-1207116624', 'jpg');
 aAd[3] = 'http://www.regencypacificrealty.com/vacations/';
 aAd[4] = '1';
@@ -72,16 +60,7 @@ aAd[10] = 0;
 aAd[11] = 0;
 aAds[aAds.length] = aAd;
 }
-if ((nAdsysTime >= 1207890000) && (nAdsysTime <= 1229061599)) {
-aAd = new Array('+top_leader', '72749-1171690856', 'js');
-aAd[7] = 10;
-aAd[8] = 0;
-aAd[9] = 91;
-aAd[10] = 0;
-aAd[11] = 0;
-aAds[aAds.length] = aAd;
-}
-if ((nAdsysTime >= 1197957600) && (nAdsysTime <= 1230789599)) {
+if ((nAdsysTime >= 1197936000) && (nAdsysTime <= 1249516799)) {
 aAd = new Array('+top_leader', '108227-1214969325', 'jpg');
 aAd[3] = 'http://www.balihai.com/';
 aAd[4] = '0';
@@ -93,12 +72,12 @@ aAd[10] = 0;
 aAd[11] = 0;
 aAds[aAds.length] = aAd;
 }
-if ((nAdsysTime >= 1225515600) && (nAdsysTime <= 1228111199)) {
-aAd = new Array('+top_leader', '109048-1198803418', 'swf');
+if ((nAdsysTime >= 1232582400) && (nAdsysTime <= 1246492799)) {
+aAd = new Array('+top_leader', '168228-1232647858', 'swf');
 aAd[3] = '728';
 aAd[4] = '90';
 aAd[5] = new Array();
-aAd[5][0] = '';
+aAd[5][0] = 'http%3A%2F%2Fwww.iop.oceanic.com';
 aAd[6] = '%2Btop_leader';
 aAd[7] = 10;
 aAd[8] = 0;
@@ -107,42 +86,10 @@ aAd[10] = 0;
 aAd[11] = 0;
 aAds[aAds.length] = aAd;
 }
-if ((nAdsysTime >= 1207717200) && (nAdsysTime <= 1230703199)) {
-aAd = new Array('+top_leader', '123165-1223807280', 'js');
-aAd[7] = 10;
-aAd[8] = 0;
-aAd[9] = 91;
-aAd[10] = 0;
-aAd[11] = 0;
-aAds[aAds.length] = aAd;
-}
-if ((nAdsysTime >= 1221022800) && (nAdsysTime <= 1230875999)) {
-aAd = new Array('+top_leader', '146467-1220566286', 'swf');
-aAd[3] = '728';
-aAd[4] = '90';
-aAd[5] = new Array();
-aAd[5][0] = 'http%3A%2F%2Fwww.oceanic.com%2FoceanicWebApps%2FTelevision%2FMovieLovers.html';
-aAd[6] = '%2Btop_leader';
-aAd[7] = 10;
-aAd[8] = 0;
-aAd[9] = 91;
-aAd[10] = 0;
-aAd[11] = 0;
-aAds[aAds.length] = aAd;
-}
-if ((nAdsysTime >= 1222837200) && (nAdsysTime <= 1228111199)) {
-aAd = new Array('+top_leader', '151411-1222913400', 'js');
-aAd[7] = 10;
-aAd[8] = 0;
-aAd[9] = 91;
-aAd[10] = 0;
-aAd[11] = 0;
-aAds[aAds.length] = aAd;
-}
-if ((nAdsysTime >= 1225692000) && (nAdsysTime <= 1227765599)) {
-aAd = new Array('+top_leader', '157431-1225744292', 'gif');
-aAd[3] = 'http://www.garyhooser.com';
-aAd[4] = '1';
+if ((nAdsysTime >= 1236816000) && (nAdsysTime <= 1245283199)) {
+aAd = new Array('+top_leader', '176143-1237408044', 'jpg');
+aAd[3] = 'http://kauai.hyatt.com/hyatt/hotels/offers/details.jsp?pid=2155&offerCode=&specialOfferId=19803234&corp_id=78439';
+aAd[4] = '0';
 aAd[6] = '1';
 aAd[7] = 10;
 aAd[8] = 0;
@@ -183,7 +130,7 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
    <td width="1000" height="23" colspan="11" align="left" valign="middle" background="/art/garden-head_r1_c1.jpg"><table width="97%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 	<td width="20%" align="left" valign="middle" class="date">&nbsp;&nbsp;www.kauaiworld.com</td>
-	<td width="80%" align="right" valign="middle" class="date">Latest Updated: Wednesday, November 19, 2008&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/rss" class="date">Subscribe to our RSS feeds</a></td>
+	<td width="80%" align="right" valign="middle" class="date">Latest Updated: Tuesday, June 16, 2009&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/rss" class="date">Subscribe to our RSS feeds</a></td>
 </tr>
 </tbody></table></td>
   </tr>
@@ -210,7 +157,7 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
    <td><a href="/community/" onmouseout="MM_swapImgRestore();MM_startTimeout();" onmouseover="MM_showMenu(window.mm_menu_0606102131_5,0,26,null,'gardenhead_r3_c6');MM_swapImage('gardenhead_r3_c6','','/art/garden-head_r3_c6_f2.jpg',1);"><img name="gardenhead_r3_c6" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c6.jpg" width="92" height="26" border="0" alt=""></a></td>
    <td><a href="/lifestyles/" onmouseout="MM_swapImgRestore();MM_startTimeout();" onmouseover="MM_showMenu(window.mm_menu_0606102351_6,0,26,null,'gardenhead_r3_c7');MM_swapImage('gardenhead_r3_c7','','/art/garden-head_r3_c7_f2.jpg',1);"><img name="gardenhead_r3_c7" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c7.jpg" width="81" height="26" border="0" alt=""></a></td>
    <td><a href="/obituaries/" onmouseout="MM_swapImgRestore();MM_startTimeout();" onmouseover="MM_showMenu(window.mm_menu_0606102551_7,0,26,null,'gardenhead_r3_c8');MM_swapImage('gardenhead_r3_c8','','/art/garden-head_r3_c8_f2.jpg',1);"><img name="gardenhead_r3_c8" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c8.jpg" width="86" height="26" border="0" alt=""></a></td>
-   <td><a href="http://www.kauaiworld.com/ek" target="_blank" onmouseover="MM_showMenu(window.mm_menu_0606102640_8,0,26,null,'gardenhead_r3_c9');MM_swapImage('gardenhead_r3_c9','','/art/garden-head_r3_c9_f2.jpg',1);" onmouseout="MM_swapImgRestore();MM_startTimeout();"><img name="gardenhead_r3_c9" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c9.jpg" width="72" height="26" border="0" alt=""></a></td>
+   <td><a href="http://www.kauaiworld.com/visit/" target="_blank" onmouseover="MM_showMenu(window.mm_menu_0606102640_8,0,26,null,'gardenhead_r3_c9');MM_swapImage('gardenhead_r3_c9','','/art/garden-head_r3_c9_f2.jpg',1);" onmouseout="MM_swapImgRestore();MM_startTimeout();"><img name="gardenhead_r3_c9" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c9.jpg" width="72" height="26" border="0" alt=""></a></td>
    <td><img name="gardenhead_r3_c10" src="http://images.townnews.com/kauaiworld.com/art/garden-head_r3_c10.jpg" width="40" height="26" border="0" alt=""></td>
   </tr>
   <tr>
@@ -230,7 +177,7 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 <!-- End Left Column -->
 
 	  <td id="column-middle">
-<div id="date-publish">Wednesday, November 19, 2008</div>
+<div id="date-publish">Tuesday, June 16, 2009</div>
 	  <h2>Our Newspaper &gt; Security</h2>
 	  <div id="subsection-links" class="small"></div>
 	  <div id="index">
@@ -306,14 +253,16 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 	  <!-- Begin Right Column -->
 	  <td id="column-right">
 	   
+
+<p>
 	  
-	  
+</p><div align="center"><a href="/the_garden_island_video/"><img src="http://images.townnews.com/kauaiworld.com/art/tgivideo.jpg" alt="tgivideo" width="260" height="36" border="0"></a></div>  
 	  
 <div class="topads_tabs">
 
 <ul class="topads_menu">
 	<li><a id="topads1" class="selected" href="javascript:void(0);" onclick="toggle('1','topads','4');return false;">Jobs</a></li>
-	<li><a id="topads2" href="javascript:void(0);" onclick="toggle('2','topads','4');return false;">Homes</a></li>
+	<li><a id="topads2" href="javascript:void(0);" onclick="toggle('2','topads','4');return false;">Daily Ads</a></li>
 	<li><a id="topads3" href="javascript:void(0);" onclick="toggle('3','topads','4');return false;">Motoring</a></li>
 	<li><a id="topads4" href="javascript:void(0);" onclick="toggle('4','topads','4');return false;">Rentals</a></li>
 </ul>
@@ -326,8 +275,8 @@ aCampaigns[91] = 100;
 aAds = new Array();
 nAdsysTime = new Date().getTime()/1000;
 document.usePlayer = 1;
-if ((nAdsysTime >= 1160456400) && (nAdsysTime <= 1476161999)) {
-aAd = new Array('+topads1', '59941-1227013437', 'js');
+if ((nAdsysTime >= 1160438400) && (nAdsysTime <= 1476143999)) {
+aAd = new Array('+topads1', '59941-1245153711', 'js');
 aAd[7] = 10;
 aAd[8] = 0;
 aAd[9] = 91;
@@ -339,7 +288,7 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 
 // -->
 </script></div>
-<div id="div_topads2" class="tab_item"><!-- AdSys ad not found for our_newspaper/security:topads2 --><a href="/classifieds/real_estate/">View Home Listings</a></div>
+<div id="div_topads2" class="tab_item"><!-- AdSys ad not found for our_newspaper/security:topads2 --><a href="http://advault.kauaiworld.com/ROP/Categories.aspx">Daily Print Advertisers</a></div>
 <div id="div_topads3" class="tab_item"><script type="text/javascript">
 <!-- 
 aCampaigns = new Array();
@@ -347,8 +296,8 @@ aCampaigns[91] = 100;
 aAds = new Array();
 nAdsysTime = new Date().getTime()/1000;
 document.usePlayer = 1;
-if ((nAdsysTime >= 1160456400) && (nAdsysTime <= 1476161999)) {
-aAd = new Array('+topads3', '59943-1227013448', 'js');
+if ((nAdsysTime >= 1160438400) && (nAdsysTime <= 1476143999)) {
+aAd = new Array('+topads3', '59943-1245153724', 'js');
 aAd[7] = 10;
 aAd[8] = 0;
 aAd[9] = 91;
@@ -367,8 +316,8 @@ aCampaigns[91] = 100;
 aAds = new Array();
 nAdsysTime = new Date().getTime()/1000;
 document.usePlayer = 1;
-if ((nAdsysTime >= 1160456400) && (nAdsysTime <= 1476161999)) {
-aAd = new Array('+topads4', '59942-1227013443', 'js');
+if ((nAdsysTime >= 1160438400) && (nAdsysTime <= 1476143999)) {
+aAd = new Array('+topads4', '59942-1245153719', 'js');
 aAd[7] = 10;
 aAd[8] = 0;
 aAd[9] = 91;
@@ -393,10 +342,10 @@ aCampaigns[91] = 100;
 aAds = new Array();
 nAdsysTime = new Date().getTime()/1000;
 document.usePlayer = 1;
-if ((nAdsysTime >= 1223269200) && (nAdsysTime <= 1538888399)) {
-aAd = new Array('+right01', '152151-1223323811', 'gif');
-aAd[3] = '';
-aAd[4] = '0';
+if ((nAdsysTime >= 1235174400) && (nAdsysTime <= 1550707199)) {
+aAd = new Array('+right01', '173067-1240954694', 'gif');
+aAd[3] = 'http://www.kauaiworld.com/visit/';
+aAd[4] = '1';
 aAd[6] = '1';
 aAd[7] = 10;
 aAd[8] = 0;
@@ -414,8 +363,12 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 <div class="ad"><!-- AdSys ad not found for our_newspaper/security:right04 --></div>
 <p>
 	  </p></div>
-
 	  
+<div align="center"><a href="http://advault.kauaiworld.com/SS/Tiles.aspx"><img src="http://images.townnews.com/kauaiworld.com/art/coupon_front.jpg" alt="coupon" width="250" height="250" border="0"></a></div>  
+	  
+
+
+
 	  
 <div id="poll-box">
 	<h2>Online Poll</h2>
@@ -428,7 +381,7 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 <table cellpadding="0" width="100%" cellspacing="1" border="0">
   <tbody><tr>
     
-  <th colspan="7" align="center" class="cal-head"> November 2008 </th>
+  <th colspan="7" align="center" class="cal-head"> June 2009 </th>
   </tr>
   <tr class="cal-dow">
     <th width="14%" class="sunday">Su</th>
@@ -440,48 +393,40 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
     <th width="14%" class="saturday">S</th>
   </tr>  <tr class="cal-row">
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-01">1</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-01">1</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-02">2</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-03">3</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-04">4</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-05">5</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-06">6</a></td>
   </tr>  <tr class="cal-row">
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-02">2</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-03">3</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-04">4</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-05">5</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-06">6</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-07">7</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-08">8</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-07">7</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-08">8</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-09">9</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-10">10</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-11">11</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-12">12</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-13">13</a></td>
   </tr>  <tr class="cal-row">
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-09">9</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-10">10</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-11">11</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-12">12</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-13">13</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-14">14</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-15">15</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-14">14</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-15">15</a></td>
+        <td id="today"><a href="/calendar/?showdate=2009-06-16"><b>16</b></a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-17">17</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-18">18</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-19">19</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-20">20</a></td>
   </tr>  <tr class="cal-row">
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-16">16</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-17">17</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-18">18</a></td>
-        <td id="today"><a href="/calendar/?showdate=2008-11-19"><b>19</b></a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-20">20</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-21">21</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-22">22</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-21">21</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-22">22</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-23">23</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-24">24</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-25">25</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-26">26</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-27">27</a></td>
   </tr>  <tr class="cal-row">
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-23">23</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-24">24</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-25">25</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-26">26</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-27">27</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-28">28</a></td>
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-29">29</a></td>
-  </tr>  <tr class="cal-row">
-        <td class="activecell"><a href="/calendar/?showdate=2008-11-30">30</a></td>
-        <td></td>
-        <td></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-28">28</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-29">29</a></td>
+        <td class="activecell"><a href="/calendar/?showdate=2009-06-30">30</a></td>
         <td></td>
         <td></td>
         <td></td>
@@ -490,11 +435,10 @@ adsys_displayAd('http://adsys.townnews.com', 'kauaiworld.com', aAds, aCampaigns)
 </div>
 </div>
 </div>
-
 	  
-	  </td>
-<!-- End Right Column -->
+</td>
 
+<!-- End Right Column -->
 	</tr>
 </tbody></table>
 <!-- End Content Table -->
@@ -611,7 +555,7 @@ Employment Opportunities at The Garden Island Newspaper
 
 <table border="0" cellspacing="0" cellpadding="0" width="100%">
     <tbody><tr>
-      <td id="footer">Copyright © 2008 - Kauai Publishing Company
+      <td id="footer">Copyright © 2009 - Kauai Publishing Company
       <div id="footer-links"><a href="/our_newspaper/security/">Privacy Policy</a> | <a href="https://secure.townnews.com/kauaiworld.com/subscriber_services/">Subscribe</a> | <a href="/rss/"><img src="http://images.townnews.com/kauaiworld.com/art/tool_icons/icon-rss.gif" width="15" height="15" border="0" align="absmiddle"> RSS</a><br>
 <span style="font: 10px Arial">Powered by <a href="http://www.townnews.com" target="_new" style="font: 10px Arial">TownNews.com</a></span></div></td>
 	</tr>
@@ -652,8 +596,8 @@ s.prop10=""
 s.prop11=""
 s.prop12=""
 s.prop13=""
-s.prop14="1:59"
-s.prop15="Wednesday"
+s.prop14="7:45"
+s.prop15="Tuesday"
 s.prop16=""
 s.prop17=""
 s.prop18=""
