--- a/m/ma/mad/madisonavenue.com.html
+++ b/m/ma/mad/madisonavenue.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the madisonavenue.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217055807id_/http%3A//www.madisonavenue.com/advertiserRegistration.do%3Faction%3DprivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the madisonavenue.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616174632id_/http%3A//www.madisonavenue.com/advertiserRegistration.do%3Faction%3DprivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>MadisonAvenue.com | PRIVACY POLICY | Advanced Traffic Acquisition Platform</title>
@@ -44,21 +44,22 @@
     	<div id="header">
     		
 
+
+
  
- 
-
-
-
  
 
 
 
  
+
+
+
 
 <script type="text/javascript" language="JavaScript" src="resource/js/util.js"></script>
 
 
-<div id="logo"><img src="resource/img/ma2/madisonavenue.com.gif" alt="MadisonAvenue.com"></div>
+<div id="logo"><a href="http://www.madisonavenue.com"><img src="resource/img/ma2/madisonavenue.com.gif" alt="Free Ad Rotation Solution" title="Free Ad Rotation Solution"></a></div>
    <div id="login">
    
    
