--- a/c/cr/cru/cruisecheap.com.html
+++ b/c/cr/cru/cruisecheap.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cruisecheap.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216025806id_/http%3A//www.cruisecheap.com/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cruisecheap.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616175546id_/http%3A//www.cruisecheap.com/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="/javascript/CheckForm.js"></script>
 <script type="text/javascript" src="/javascript/PopupWindow.js"></script>
 <script type="text/javascript" src="/javascript/HM_f_Pop.js" language="JavaScript"></script><link rel="SHORTCUT ICON" href="http://www.cruisecheap.com/cc_favicon.ico">
+<script language="JavaScript" src="/common_library/js/census.js" type="text/javascript"></script>
 </head>
 
 
@@ -34,6 +35,7 @@
 <!-- TOPNAV : BEGIN -->
 
 <script src="/javascript/HideDiv.js" type="text/javascript"></script>
+<script src="/common_library/js/emailFriendajax.js" type="text/javascript"></script>
 <table cellspacing="0" cellpadding="0" border="0" width="752" height="130" bgcolor="#ffffff" background="/images/top_bkg_022008.gif">
 <tbody><tr>
 	<td width="298" valign="middle" rowspan="2"><a href="/index.asp"><img src="/images/nav_logo_v3.gif" width="298" height="82" alt="Cheap Cruises from CruiseCheap.com" border="0"></a></td>
@@ -83,7 +85,7 @@
 			</div>
 			</td>
 			<td><img src="/images/dot_clear.gif" width="15" height="1"></td>
-			<td width="250" align="right"><div class="crumbs_div"><a href="/email_to_a_friend.asp" class="crumbs"><img src="/images/email.gif" width="16" height="10" alt="Email to a Friend" border="0" hspace="5">Email This Page</a><img src="/images/dot_clear.gif" width="7" height="1"><img src="/images/print_icon.gif" height="14" width="21" alt="Print This Page"><a href="javascript:PRINTDISPLAY('/print_display.asp?PageID=32')" class="crumbs">Print Page</a><img src="/images/dot_clear.gif" width="10" height="1"></div></td>
+			<td width="250" align="right" nowrap=""><div class="crumbs_div"><a href="JavaScript:revealEAFModal();"><img hspace="5" border="0" src="/images/email.gif" alt="Email to a friend"></a><a href="JavaScript:revealEAFModal();">Email This Page</a><img src="/images/dot_clear.gif" width="17" height="1"><img src="/images/print_icon.gif" height="14" width="21" alt="Print This Page"><a href="javascript:window.print();" class="crumbs">Print Page</a><img src="/images/dot_clear.gif" width="10" height="1"></div></td>
 		  </tr>
 		  <tr>
 			<td colspan="3" align="center"><img src="/images/dot_crumb.gif" width="732" height="1" alt="" vspace="8"><br></td>
@@ -367,12 +369,6 @@ expectations.™</i></p>
 	<td width="170">
 <div class="rightnavcolumn">
 <img src="/images/ins_searchright_head_02.gif" width="170" height="5" alt="" border="0"><br>
-<!---->
-
-
-
-
-
 
 
 
@@ -383,12 +379,6 @@ expectations.™</i></p>
 <img src="/images/ins_right_title_aboutus.gif" width="170" height="32" alt="" border="0" vspace="20"><br>
 <div style="margin-left : 10px; margin-right : 10px;">
 <div style="margin-left : 5px;">
-
-
-<!--
-
--->
-
 <img src="/images/square_6x6_blue.gif" style="margin-bottom : 2px; margin-right : 5px;"><a class="rightnav" href="/why_cruisecheap.com.asp">About Us</a><br>
 	<img src="/images/dot_clear.gif" width="1" height="9"><br>
 	<img src="/images/square_6x6_blue.gif" style="margin-bottom : 2px; margin-right : 5px;"><a class="rightnav" href="/why_cruisecheap.com.asp?PageID=295">Welcome Message</a><br>
@@ -411,8 +401,6 @@ expectations.™</i></p>
 	<img src="/images/dot_clear.gif" width="1" height="9"><br>
 
 
-
-<!---->
 </div></div><img src="/images/dot_clear.gif" width="1" height="20"><br>
 
 <!-- SUBNAV : ABOUT US : END -->
@@ -525,22 +513,16 @@ expectations.™</i></p>
 </div>
 
 
-<!--
-
--->
-
-
-
 <!-- LIVE AGENT HELP : END -->
 
 
 
 
-<!-- EMAIL UPDATES : BEGIN
+<!-- EMAIL UPDATES : BEGIN-->
 
 
 	
-EMAIL UPDATES : END -->
+<!--EMAIL UPDATES : END -->
 
 	
 	</div>
@@ -623,8 +605,7 @@ EMAIL UPDATES : END -->
     		<img src="/images/client/creditcards/images_creditcards.gif" alt="CruiseCheap.com accepts the following credit cards" width="251" height="44" border="0"><br>
 	    	<br>
     		<div align="center">
-                <!--  <a href="http://www.bbbonline.org/cks.asp?id=105042210551" target="_blank"><img border="0" src="/images/client/logos/ftr/logo_bbbseal_135.gif" alt="Better Business Bureau Online Reliability Program" width="135" height="48" hspace="14"></a><img border="0" src="/images/client/logos/ftr/logo_alaska_135.gif" alt="Alaska Travel Industry Association Member" width="135" height="50" hspace="14"><img border="0" src="/images/client/logos/ftr/logo_clia_40.jpg" alt="Cruise Lines International Association Member" width="94" height="40" hspace="14"><img border="0" src="/images/client/logos/ftr/logo_vacatoncom_40.gif" alt="Vacation.com Member" width="135" height="40" hspace="14"><img border="0" src="/images/client/logos/ftr/logo_delraychamber_50.gif" alt="Delray Beach Chamber of Commerce Member" width="75" height="50" hspace="14"><br> -->
-    	    	<a href="http://www.bbbonline.org/cks.asp?id=105042210551" target="_blank"><img border="0" src="/images/client/logos/ftr/logo_bbbo.gif" alt="Better Business Bureau Online Reliability Program" width="110" height="40"></a><img border="0" src="/images/client/logos/ftr/logo_alaska_tourism.gif" alt="Alaska Travel Industry Association Member" width="108" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_clia.gif" alt="Cruise Lines International Association Member" width="94" height="40"><img border="0" src="/images/client/logos/ftr/logo_vacacom.gif" alt="Vacation.com Member" width="131" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_delraycc.gif" alt="Delray Beach Chamber of Commerce Member" width="59" height="40"><img border="0" src="/images/client/logos/ftr/logo_iata.gif" alt="IATA Accredited" width="60" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_iatan.gif" alt="IATAN Endorsed" width="46" height="40"><br>
+    	    	<a href="http://www.seflorida.bbb.org/BusinessReport.aspx?CompanyID=30006676" target="_blank"><img border="0" src="/images/client/logos/ftr/logo_bbbo.gif" alt="Better Business Bureau Online Reliability Program" width="110" height="40"></a><img border="0" src="/images/client/logos/ftr/logo_alaska_tourism.gif" alt="Alaska Travel Industry Association Member" width="108" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_clia.gif" alt="Cruise Lines International Association Member" width="94" height="40"><img border="0" src="/images/client/logos/ftr/logo_vacacom.gif" alt="Signature Travel Network Member" width="131" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_delraycc.gif" alt="Delray Beach Chamber of Commerce Member" width="59" height="40"><img border="0" src="/images/client/logos/ftr/logo_iata.gif" alt="IATA Accredited" width="60" height="40" hspace="10"><img border="0" src="/images/client/logos/ftr/logo_iatan.gif" alt="IATAN Endorsed" width="46" height="40"><br>
     		</div>
 
             <br>
@@ -642,7 +623,7 @@ EMAIL UPDATES : END -->
 
     		<div class="subfooter">
         		Fla. Seller of Travel Reg. No. ST35780<br>
-        		Copyright © 2004-2008, <a class="subfooter" style="text-decoration : none;" href="http://www.cruisecheap.com">CruiseCheap.com</a> / WMPH Incorporated<br>
+        		Copyright © 2004-2009, <a class="subfooter" style="text-decoration : none;" href="http://www.cruisecheap.com">CruiseCheap.com</a> / WMPH Incorporated<br>
                 <br>
                 <div align="center"><script language="Javascript" src="https://seal.godaddy.com/getSeal?sealID=4119058406e9552f51271136501988117ecf01837522742673886393"></script></div>
                 <br>
@@ -685,11 +666,12 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try {
 var pageTracker = _gat._getTracker("UA-484376-2");
-pageTracker._setDomainName("cruisecheap.com");
-pageTracker._initData();
 pageTracker._trackPageview();
-</script>
+} catch(err) {}</script>
+
+
 
 
 
