hersheys.com (archived on 2009-06-16)
{
  "alexa_rank": 28335,
  "analysis_subcorpus": true,
  "categories": "business;foodandrecipes",
  "char_count": 16509,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.84,
  "homepage_snapshot_redirected_domain": "hersheys.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331180131id_/http://www.hersheys.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331180131id_/http%3A//hersheys.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hersheys.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616175840id_/http%3A//www.hersheys.com/privacy",
  "policy_title": "Privacy Policy - HERSHEY'S",
  "policy_url": "hersheys.com/privacy",
  "sha1": "e667c186bb5cf1816a4077c90a0ba9671c888ede",
  "simhash": 9044370726976417069,
  "simhash_updated": true,
  "site_hostname": "hersheys.com",
  "site_url": "http://hersheys.com",
  "smog": 14.51,
  "strict_updated": true,
  "timestamp": "20090616175840",
  "word_count": 2765,
  "year": 2009
}

--- a/h/he/her/hersheys.com.html
+++ b/h/he/her/hersheys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hersheys.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217052315id_/http%3A//www.hersheys.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hersheys.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616175840id_/http%3A//www.hersheys.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy - HERSHEY'S</title>
@@ -105,10 +105,9 @@
                               <br>
                               <span class="purpleHeader">Kids</span> <br>
                               We take seriously our responsibility to our many young consumers. Our sites have been designed 
-                            <font color="#0000FF"><i>primarily for our adult 
+                            primarily for our adult 
                             consumers to enjoy, but they also have been designed 
-                            to be </i></font><strike><font color="#0000FF"><i>to 
-                            be fun</i></font></strike> accessible, safe for kids of all ages, and to adhere to all applicable laws and regulations. Children under the age of 13 and their parents should review the section of this policy called "A Word to Parents About Kids’ Privacy" which discusses the special steps we take for young children who may visit our pages. <br>
+                            to be<i><font color="#0000FF"> </font></i>accessible, safe for kids of all ages, and to adhere to all applicable laws and regulations. Children under the age of 13 and their parents should review the section of this policy called "A Word to Parents About Kids’ Privacy" which discusses the special steps we take for young children who may visit our pages. <br>
                               <br>
                               <span class="purpleHeader">How We Collect Information</span> <br>
                               Below are some of the ways in which a visitor may provide information to us on-line and how we may use that information. <br>
@@ -154,24 +153,21 @@
                                   registration process, we collect information necessary for prize fulfillment and will not share this 
                                   information with any third party companies 
                                   unless it is for prize fulfillment purposes. 
-                                  <strike><font color="#0000FF"><i>If a prize is valued at over $600, a social security number will be requested.</i></font></strike>
-                                  <font color="#0000FF"><i>If you win a prize, 
+                                  If you win a prize, 
                                   additional information may be collected 
                                   offline for tax and prize fulfillment 
-                                  purposes. </i></font>Your online registration may 
+                                  purposes. Your online registration may 
                                   be used across our web sites to enter multiple 
                                   promotions and/or sweepstakes or to access 
                                   certain content. The first initial, last name, hometown and state of all winners will be included on a Winners List. The Winners List will be provided upon request and as required by law. Information required for tax purposes, the Winner’s List or other information required by law is kept as required by law. We also may use the email address that you provide to send you promotional offers<font color="#0000FF"> </font>if you opt in.
                                 </p></li>
                                 <li>
                                   <p style="margin-bottom: 3"><b>Coupons</b>: Sometimes we offer coupons by mail to web visitors who provide us with their name and mailing address 
-                                  <strike><i><font color="#0000FF">when there is an offer available online.</font></i></strike>
-                                  <font color="#0000FF"><strike><i>The information provided is used only to mail the coupons and is deleted within 60 days of the mailing of the coupons.</i></strike><i>&nbsp; 
-                                  The information provided may also be used to 
+                                  <font color="#0000FF"><i>&nbsp;</i></font>The information provided may also be used to 
                                   facilitate that same visitor's entry into a 
                                   sweepstakes or contest so that the consumer 
                                   does not have to repeatedly enter the same 
-                                  information.</i></font></p></li>
+                                  information.</p></li>
                                 <li>
                                   <p style="margin-bottom: 3">
                                   <b>Tell-a-Friend</b>: 
@@ -251,21 +247,19 @@
                                 </p></li>
                                 <li>
                                   <p style="margin-bottom: 3"> <b>Auctions:</b> Visitors to some of our web sites can participate in on-line auctions. We only collect information which is required for participation in the auction and delivery of merchandise to auction winners. All personally identifiable information submitted is used  for the purpose of the auction.
-                                  <i><font color="#0000FF">The same information 
+                                  The same information 
                                   may also be used to facilitate that same 
                                   visitor's entry into a sweepstakes or contest 
                                   so that the consumer does not have to 
-                                  repeatedly enter the same information.</font></i></p></li>
+                                  repeatedly enter the same information.</p></li>
                                 <li>
-                                  <p style="margin-bottom: 3"><b>Other Features: </b>There may be other features available on our web sites which may require some personally identifiable information to use the feature. We only use the personally identifiable information to provide the feature<i><font color="#0000FF"><strike> and delete it within a reasonable period of time after the information is no longer necessary.</strike></font></i></p></li>
+                                  <p style="margin-bottom: 3"><b>Other Features: </b>There may be other features available on our web sites which may require some personally identifiable information to use the feature. We only use the personally identifiable information to provide the feature.</p></li>
                               </ul>
                               <span class="purpleHeader">
                               <p>Business Partners</p>
                               </span>
                               <p>We have some business partners with whom we may operate some of our pages and share information. For example, on occasion we may offer a sweepstakes jointly with another company. In such instances, information may be shared with the co-sponsor so that the sweepstakes may be conducted. Another situation in which information may be shared is when we have licensed our trademarks to another company to manufacture or distribute a particular product. 
-                              <strike><font color="#0000FF">HERSHEY’S MILK, for example, is distributed by Morningstar Foods, a subsidiary of Dean Foods. Accordingly, information received by the HERSHEY’S MILK web site is shared by Hershey, Morningstar Foods and Dean Foods. Dean Foods can be contacted at
-                              </font> <a href="mailto:webmaster@deanfoods.com" class="contentText"><b>webmaster@deanfoods.com</b></a><font color="#0000FF">. Morningstar Foods can be contacted at
-                              </font> <a href="mailto:webmaster@suiza.com" class="contentText"><b>webmaster@suiza.com</b></a></strike>.</p>
+                              </p>
                               <span class="purpleHeader">
                               <p>Aggregate Information</p>
                               </span>
@@ -289,7 +283,6 @@
                               </span>
                               <p>Our Privacy Policy applies to children as well as adults. There are some extra precautions that we take, however, with respect to collecting information from children under 13.</p>
                               <ul>
-                                <li><strike><i><font color="#0000FF">We encourage parents to explore our web sites with their children.</font></i></strike></li>
                                 <li>All promotion
                                 entrants will be requested to provide their age. We do not knowingly collect personally identifiable information from children under 13 on-line without first obtaining permission from the child’s parent or guardian. 
                                 When a child under 13 years old attempts to 
@@ -349,10 +342,10 @@
                               <font color="#0000ff"><b>
                               <a href="http://www.hersheys.com/contactus/contact-us-date.asp">
                               Contacting Us Online</a></b></font></i>. To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections.
-                              <i><font color="#0000FF">In addition to this, all 
+                              In addition to this, all 
                               sweepstakes and www.hersheyskitchens.com websites 
                               let you edit your information online within that 
-                              website.</font></i></p>
+                              website.</p>
                               <span class="purpleHeader">
                               <p>This Privacy Policy Is For Our On-line Consumers</p>
                               </span>
@@ -361,10 +354,10 @@
                               <p>Links</p>
                               </span>
                               <p>Our policy is to link only to other sites which are appropriate for visitors to our web site. However, content on web sites can change quickly, so we cannot always guarantee the appropriateness of the content of sites we link to.&nbsp;
-                              <font color="#0000FF"><i>When you leave our site 
+                              When you leave our site 
                               for another website, you will go first to a bumper 
                               page informing you that you are leaving our 
-                              website.</i></font></p>
+                              website.</p>
                               <span class="purpleHeader">
                               <p>How To Contact Us</p>
                               </span>
@@ -378,8 +371,8 @@
                                 <br>
                                 </i> Copyright © The Hershey Company<br>
                                 <br>
-                                <b>Effective:</b> <span class="style1">November 
-                              24, 2008</span><br>
+                                <b>Effective:</b> <span class="style1">March 27, 
+								2009</span><br>
                                 <br>
                                 <br>
                               </p>
@@ -433,8 +426,6 @@
 </tbody></table>
 
 
-
-
 <!--  Include Omniture -->
 <!-- Include the Omniture common js file for tracking -->
 <script type="text/javascript" src="/general/js/s_code_config.js"></script>
@@ -446,207 +437,6 @@ s.pageName = "";
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 var s_code=s.t();if(s_code)document.write(s_code)
 //--></script>
-
-<!-- START OF SmartSource Data Collector TAG -->
-<!-- WebTrends SmartSource Data Collector                  -->
-<!-- &copy; 1996-2004 NetIQ Corporation.  All rights reserved.  -->
-<!-- $DateTime: 2004/05/03 13:43:43 $ -->
-<script language="Javascript"><!--
-gVersion="1.0";
-//-->
-</script>
-<script language="Javascript1.1"><!--
-gVersion="1.1";
-//-->
-</script>
-<script language="Javascript1.2"><!--
-gVersion="1.2";
-var RE={"%09":/\t/g,"%20":/ /g,"%23":/\#/g,"%26":/\&/g,"%2B":/\+/g,"%3F":/\?/g,"%5C":/\\/g};
-//-->
-</script>
-<script language="Javascript1.3"><!--
-gVersion="1.3";
-//-->
-</script>
-<script language="Javascript1.4"><!--
-gVersion="1.4";
-//-->
-</script>
-<script language="Javascript1.5"><!--
-gVersion="1.5";
-//-->
-</script>
-<script language="JavaScript"><!--
-var gImages=new Array;
-var gIndex=0;
-var DCS=new Object();
-var WT=new Object();
-var DCSext=new Object();
-
-var gDomain="sdc.hersheys.com";
-var gDcsId="dcs00wx2q00000gs00ka08jgj_6b9l";
-// Add customizations here
-WT.sp=getSP();
-//alert(WT.sp);
-DCS.dcsp3p="0808000008002800600204122,http://sdc.hersheys.com/w3c/p3p.xml";
-
-function getSP() {
-  var sp = window.location.pathname.substr(1);
-  var idx = sp.indexOf('/');
-  if (idx != -1) {
-    return sp.substring(0,idx);
-  } else {
-    return "nosplit";  
-  }
-}
-
-function dcsMultiTrack(){
-	for (var i=0;i<arguments.length;i++){
-		if (arguments[i].indexOf('WT.')==0){
-				WT[arguments[i].substring(3)]=arguments[i+1];
-				i++;
-		}
-		if (arguments[i].indexOf('DCS.')==0){
-				DCS[arguments[i].substring(4)]=arguments[i+1];
-				i++;
-		}
-		if (arguments[i].indexOf('DCSext.')==0){
-				DCSext[arguments[i].substring(7)]=arguments[i+1];
-				i++;
-		}
-	}
-	var dCurrent=new Date();
-	DCS.dcsdat=dCurrent.getTime();
-	dcsTag();
-}
-
-
-// End dcsMultiTrack Function
-
-function dcsVar(){
-	var dCurrent=new Date();
-	WT.tz=dCurrent.getTimezoneOffset()/60*-1;
-	if (WT.tz==0){
-		WT.tz="0";
-	}
-	WT.bh=dCurrent.getHours();
-	WT.ul=navigator.appName=="Netscape"?navigator.language:navigator.userLanguage;
-	if (typeof(screen)=="object"){
-		WT.cd=navigator.appName=="Netscape"?screen.pixelDepth:screen.colorDepth;
-		WT.sr=screen.width+"x"+screen.height;
-	}
-	if (typeof(navigator.javaEnabled())=="boolean"){
-		WT.jo=navigator.javaEnabled()?"Yes":"No";
-	}
-	if (document.title){
-		WT.ti=document.title;
-	}
-	WT.js="Yes";
-	if (typeof(gVersion)!="undefined"){
-		WT.jv=gVersion;
-	}
-	DCS.dcsdat=dCurrent.getTime();
-	DCS.dcssip=window.location.hostname;
-	DCS.dcsuri=window.location.pathname;
-	if (window.location.search){
-		DCS.dcsqry=window.location.search;
-	}
-	if ((window.document.referrer!="")&&(window.document.referrer!="-")){
-		if (!(navigator.appName=="Microsoft Internet Explorer"&&parseInt(navigator.appVersion)<4)){
-			DCS.dcsref=window.document.referrer;
-		}
-	}
-}
-
-function A(N,V){
-	return "&"+N+"="+dcsEscape(V);
-}
-
-function dcsEscape(S){
-	if (typeof(RE)!="undefined"){
-		var retStr = new String(S);
-		for (R in RE){
-			retStr = retStr.replace(RE[R],R);
-		}
-		return retStr;
-	}
-	else{
-		return escape(S);
-	}
-}
-
-function dcsCreateImage(dcsSrc){
-	if (document.images){
-		gImages[gIndex]=new Image;
-		gImages[gIndex].src=dcsSrc;
-		gIndex++;
-	}
-	else{
-		document.write('<IMG BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="'+dcsSrc+'">');
-	}
-}
-
-function dcsMeta(){
-	var myDocumentElements;
-	if (document.all){
-		myDocumentElements=document.all.tags("meta");
-	}
-	else if (document.documentElement){
-		myDocumentElements=document.getElementsByTagName("meta");
-	}
-	if (typeof(myDocumentElements)!="undefined"){
-		for (var i=1;i<=myDocumentElements.length;i++){
-			myMeta=myDocumentElements.item(i-1);
-			if (myMeta.name){
-				if (myMeta.name.indexOf('WT.')==0){
-					WT[myMeta.name.substring(3)]=myMeta.content;
-				}
-				else if (myMeta.name.indexOf('DCSext.')==0){
-					DCSext[myMeta.name.substring(7)]=myMeta.content;
-				}
-				else if (myMeta.name.indexOf('DCS.')==0){
-					DCS[myMeta.name.substring(4)]=myMeta.content;
-				}
-			}
-		}
-	}
-}
-
-function dcsTag(){
-	var P="http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://"+gDomain+(gDcsId==""?'':'/'+gDcsId)+"/dcs.gif?";
-	for (N in DCS){
-		if (DCS[N]) {
-			P+=A(N,DCS[N]);
-		}
-	}
-	for (N in WT){
-		if (WT[N]) {
-			P+=A("WT."+N,WT[N]);
-		}
-	}
-	for (N in DCSext){
-		if (DCSext[N]) {
-			P+=A(N,DCSext[N]);
-		}
-	}
-	if (P.length>2048&&navigator.userAgent.indexOf('MSIE')>=0){
-		P=P.substring(0,2040)+"&WT.tu=1";
-	}
-	//alert(P);
-	dcsCreateImage(P);
-}
-
-dcsVar();
-dcsMeta();
-dcsTag();
-//-->
-</script>
-
-<noscript>
-<IMG BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://sdc.hersheys.com/dcs00wx2q00000gs00ka08jgj_6b9l/njs.gif?dcsuri=/nojavascript&WT.js=No&dcsp3p=0808000008002800600204122,http://sdc.hersheys.com/w3c/p3p.xml"></noscript>
-<!-- END OF Data Collection Server TAG -->	
-
-
           </td>
         </tr>
       </tbody></table>
