--- a/f/fr/fre/freelistingdirectory.info.html
+++ b/f/fr/fre/freelistingdirectory.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freelistingdirectory.info privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217051952id_/http%3A//www.freelistingdirectory.info/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freelistingdirectory.info privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616175902id_/http%3A//freelistingdirectory.info/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
