--- a/r/ra/rad/radioreference.com.html
+++ b/r/ra/rad/radioreference.com.html
@@ -1,121 +1,123 @@
-<!--The following is the downloaded HTML source of the radioreference.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217050650id_/http%3A//www.radioreference.com/apps/content/%3Fcid%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the radioreference.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616175944id_/http%3A//www.radioreference.com/apps/content/%3Fcid%3D1) for the most accurate reproduction.-->
 
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="KEYWORDS" content="Radio Scanner Database Frequencies Trunked Trunking FCC License Database Data Communications Reference">
 <meta name="DESCRIPTION" content="Privacy Policy for All RadioReference.com Web Properties">
-<!-- overLIB (c) Erik Bosrup -->
-</head><body bgcolor="#000000" text="#000000" link="#363636" vlink="#363636" alink="#d5ae83" onload="jsInit();"><div id="overDiv" style="position:absolute; visibility:hidden; z-index:1000;"></div>
-<script language="JavaScript" type="text/javascript" src="/scripts/overlib_mini.js"></script>
-
-<link rel="StyleSheet" href="/styles/style.css" type="text/css">
 <link rel="P3Pv1" href="/p3p/p3p.xml">
-<title>RadioReference.com - Privacy Policy</title>
-<script type="text/javascript">
+<title>Privacy Policy</title>
+		<script type="text/javascript">
 var gmapType='';
 var pageType='';
 </script>
-<script src="/scripts/init/jsInit.php" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/scripts/yui/build/assets/skins/sam/menu.css">
+<link rel="stylesheet" type="text/css" href="/styles/style401.css">
+<script type="text/javascript" src="/scripts/overlib_mini.js"></script>
+<script type="text/javascript" src="/scripts/menu/dropdown.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/connection/connection-min.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/container/container_core-min.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/datasource/datasource-min.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/utilities/utilities.js"></script>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.6.0/build/menu/menu-min.js"></script>
+<script type="text/javascript" src="/scripts/portal.php"></script>
+</head>
+<body>
+<div id="rrpage">
+<div id="overDiv"></div>
 
 
-<table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" bgcolor="#ffffff">
-<tbody><tr>
-<td bgcolor="#000000">
-<a href="/"><img src="http://images.radioreference.com/portal3/rrlogo.gif" alt="" border="0" hspace="0"></a></td>
-<td bgcolor="#000000" align="center" valign="middle">
-<a href="http://www.scannermaster.com/?Click=20907"><img border="0" src="http://images.radioreference.com/portal3/smlogo4.gif"></a>&nbsp;&nbsp;
-</td>
-</tr>
-<tr>
-<td class="linkBar" width="100%" colspan="3">
-<table width="100%" cellpadding="0" cellspacing="3">
-<tbody><tr>
-<td width="40%" valign="middle" nowrap="">
-<b><a href="/">Home</a> &nbsp;·&nbsp; <a href="/apps/account">Account</a> &nbsp;·&nbsp; <a href="/apps/account">Login</a> &nbsp;·&nbsp; <a href="/apps/submit">Submit</a> &nbsp;·&nbsp; <a href="/apps/help">Help</a></b></td>
-<td width="30%" align="center" valign="middle" nowrap="">
-<a href="/apps/db"><b>Database</b></a> &nbsp;·&nbsp; <a href="/forums"><b>Forums</b></a> &nbsp;·&nbsp; <a href="http://wiki.radioreference.com"><b>Wiki</b></a> &nbsp;·&nbsp;  <a href="http://radioreference.blogspot.com"><b>Blog</b></a> </td>
-<td>&nbsp;&nbsp;
-<!-- AddThis Button BEGIN -->
-<script type="text/javascript">addthis_pub  = 'blantonl';</script>
-<a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" border="0" alt=""></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
-<!-- AddThis Button END -->
-</td>
-<td align="right">
-<form id="searchbox_014732645207632841850:fkjydvmuoq4" action="/apps/Search"></form></td>
-<td align="right" valign="baseline" nowrap="">
-<!-- SiteSearch Google -->
-  <input type="hidden" name="cx" value="014732645207632841850:fkjydvmuoq4">
-  <input name="q" type="text" size="20" style="FONT-SIZE: 9px;">
-  </td><td nowrap="">&nbsp;<input type="image" name="sa" src="http://images.radioreference.com/portal3/icons/SearchButton.gif">
-  <input type="hidden" name="cof" value="FORID:9">
-  <input type="hidden" name="name" value="Search">
-<!-- SiteSearch Google -->
-</td><td></td>
-</tr></tbody></table>
-</td>
-</tr>
-<tr>
-<td width="100%" colspan="3" bgcolor="#E7EDF6">
-<table cellspacing="3" cellpadding="5" width="100%"><tbody><tr><td bgcolor="#E7EDF6">
-<table>
-<tbody><tr>
-<td width="180px" valign="top" nowrap=""><div class="tableHeader">Site Navigation</div><div class="tableContents"><b>General</b><br>
-<table border="0" cellpadding="0" cellspacing="0" width="90%">
-<tbody><tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/'"><td><img src="/images/barrow.gif" border="0"> <a href="/">Home</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/account/'"><td><img src="/images/barrow.gif"> <a href="/apps/account/">Your Account</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/account/'"><td><img src="/images/barrow.gif"> <a href="/apps/account/">Login</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/help/'"><td><img src="/images/barrow.gif"> <a href="/apps/help/">Help Desk</a></td></tr>
-</tbody></table>
-<hr noshade="" size="1">
-<b>Radio Features</b><br>
-<table border="0" cellpadding="0" cellspacing="0" width="90%">
-<tbody><tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/db'"><td><img src="/images/barrow.gif"> <a href="/apps/db">RR Database</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com">RR Wiki Reference</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/forums'"><td><img src="/images/barrow.gif"> <a href="/forums">RR Forums</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://radioreference.blogspot.com'"><td><img src="/images/barrow.gif"> <a href="http://radioreference.blogspot.com">RR Blog</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/Search'"><td><img src="/images/barrow.gif"> <a href="/apps/Search">RR Search</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://m.radioreference.com'"><td><img src="/images/barrow.gif">&nbsp;<img src="http://images.radioreference.com/portal3/icons/CalendarAllDayEvent.gif" border="0">&nbsp;<a href="http://m.radioreference.com">RR Mobile</a></td></tr>
-</tbody></table>
-<hr noshade="" size="1">
-<b>Other Content</b><br>
-<table border="0" cellpadding="0" cellspacing="0" width="90%">
-<tbody><tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/ebay'"><td><img src="/images/barrow.gif"> <a href="/apps/ebay">Equipment on Ebay</a></td></tr>
-</tbody></table>
-<hr noshade="" size="1">
-<b>Wiki Categories</b><br>
-<table border="0" cellpadding="0" cellspacing="0" width="90%">
-<tbody><tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/Antennas'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/Antennas">Antennas</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/Category:Downloads'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/Category:Downloads">Downloads</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/HF'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/HF">HF Radio</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/VHF/UHF_Military_Monitoring'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/VHF/UHF_Military_Monitoring">Military Monitoring</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/Category:Radio_Models'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/Category:Radio_Models">Radio Models</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/Trunking'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/Trunking">Trunking</a></td></tr>
-</tbody></table>
-<hr noshade="" size="1">
-<b>Contact/Misc</b><br>
-<table border="0" cellpadding="0" cellspacing="0" width="90%">
-<tbody><tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/help/'"><td><img src="/images/barrow.gif"> <a href="/apps/help/">Help</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/submit/'"><td><img src="/images/barrow.gif"> <a href="/apps/submit/">Submit Info</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='/apps/subscription/'"><td><img src="/images/barrow.gif"> <a href="/apps/subscription/">Premium Subscription</a></td></tr>
-<tr onmouseover="this.style.background='#C0C0C0'" onmouseout="this.style.background='#FFFFFF'" style="cursor:pointer;cursor:hand" onclick="window.location.href='http://wiki.radioreference.com/index.php/Category:Legal'"><td><img src="/images/barrow.gif"> <a href="http://wiki.radioreference.com/index.php/Category:Legal">Legal &amp; Other</a></td></tr>
-</tbody></table>
-</div><br>
-<div class="tableHeader">Sponsor Links</div>
-<div class="tableContents">
-<script type="text/javascript"><!--
-google_ad_client = "pub-0543475854053093";
-google_ad_slot = "8415047289";
-google_ad_width = 160;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</div>
-</td><td>&nbsp;</td>
-<td width="700" valign="top"><div class="tableHeader">RadioReference.com Privacy Policy</div>
-<div class="tableContents">
-<b>Policy</b>
+<table class="layout">
+	<tbody><tr>
+		<td class="leftShadow"></td>
+		<td class="gNav">
+		<table class="layout" width="100%">
+			<tbody><tr>
+				<td width="375px">&nbsp;</td>
+				<td class="fontlGrey px11"><a href="/apps/account/">Account</a>
+				&nbsp;|&nbsp; <a href="/apps/login/">Login</a> &nbsp;|&nbsp; <a href="http://m.radioreference.com">Mobile</a> &nbsp;|&nbsp; <a href="/apps/help/">Help</a> &nbsp;|&nbsp; <a href="/apps/help/">Contact</a>
+				</td>
+				<td width="75px">&nbsp;</td>
+				<td align="right"><!-- SiteSearch Google -->
+				<form style="display: inline; vertical-align: top" id="searchbox_014732645207632841850:fkjydvmuoq4" action="/apps/Search"><input type="hidden" name="cx" value="014732645207632841850:fkjydvmuoq4"> <input name="q" type="text" size="20" style="font-size: 10px"> &nbsp;<input type="image" style="vertical-align: top; border: 0px;" name="sa" src="/images/p4/button-search.gif"> <input type="hidden" name="cof" value="FORID:9"> <input type="hidden" name="name" value="Search">
+				</form>
+				<!-- SiteSearch Google --></td>
+			</tr>
+		</tbody></table>
+		</td>
+		<td class="rightShadow"></td>
+	</tr>
+	<tr>
+		<td class="leftShadow"></td>
+		<td class="headerLogo"><a href="http://www.scannermaster.com/?Click=20907"> <img style="padding-right: 17px" border="0" src="/images/p4/tp/smPortalBanner.gif"> </a></td>
+		<td class="rightShadow"></td>
+	</tr>
+	<!--  Middle with Main Menus etc -->
+	<tr>
+		<td rowspan="8" class="leftShadow"></td>
+		<td class="main">
+		
+		
+		
+		<table class="layout">
+			<tbody><tr>
+				<!-- Vertical Left Gutter -->
+				<td rowspan="8" class="exvgut"></td>
+				<td class="topMenu"><!-- Buttons for Menu -->
+				<table class="rrbutton">
+					<tbody><tr>
+						<td class="left"></td>
+						<td class="but" onclick="window.location='/'">Home</td>
+						<td class="sep"></td>
+						<td class="but" id="dbMenu">Database</td>
+						<td class="sep"></td>
+						<td class="but" id="forumsMenu">Forums</td>
+						<td class="sep"></td>
+						<td class="but" id="wikiMenu">Wiki</td>
+						<td class="sep"></td>
+						<td class="but" id="classMenu">Classifieds</td>
+						<td class="sep"></td>
+						<td class="but" onclick="window.location='/apps/submit/'">Submit
+						Info</td>
+						<td class="sep"></td>
+						<td class="but" id="aboutMenu">About</td>
+						<td class="sep"></td>
+						<td class="but" style="width: 85px"></td>
+						<td class="right"></td>
+					</tr>
+				</tbody></table>
+				<!-- End Buttons for Menu --></td>
+				<!-- Vertical Right Gutter -->
+				<td rowspan="8" class="exvgut"></td>
+			</tr>
+			<!-- Horizontal Gutter -->
+			<tr>
+				<td class="inhgut"></td>
+			</tr>
+			<tr>
+				<td valign="top">		<table class="layout">
+		<tbody><tr>
+			<td style="width: 190px; vertical-align: top">
+						<div align="center" class="box">
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-0543475854053093";
+			/* p4_homeLeft */
+			google_ad_slot = "7320722799";
+			google_ad_width = 160;
+			google_ad_height = 600;
+			//-->
+			</script>
+			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script>
+			</div>
+					</td>
+		<td class="invgut">&nbsp;</td>
+		<td width="725px" valign="top">
+		<div class="box">
+<h1>RadioReference.com Privacy Policy</h1>
+<br>
+		<b>Policy</b>
 <br><br>
 RadioReference.com is aware of the privacy concerns of its visitors. We wish to detail here our policy for collecting and using personal information.
 <br><br>
@@ -134,31 +136,62 @@ RadioReference.com uses this cookie to identify you with your registration detai
 <b>Ad serving</b>
 <br><br>
 RadioReference.com works with some third party agencies that serve ads to this site. <br><br><div class="rrline"></div>
-<font class="tiny"><i>Last Updated: 2007-12-09 15:54:48</i></font><br></div>
-</td></tr></tbody></table>
-</td></tr></tbody></table>
-</td></tr><tr>
-<td class="linkBar" width="100%" colspan="3">
-<table width="100%" cellpadding="0" cellspacing="3">
-<tbody><tr>
-<td width="33%" align="left">
-</td>
-<td width="33%" align="center" valign="middle" nowrap="">&nbsp;
-<b><a href="/apps/content/?cid=1">Privacy Policy</a> &nbsp;·&nbsp; <a href="/apps/content/?cid=2">Terms and Conditions</a> </b><br><font class="tiny" style="color: white">Copyright 2008 by RadioReference.com LLC</font>
- </td>
-<td width="33%" align="right"> &nbsp;
-</td></tr></tbody></table></td>
-</tr>
-
-
+<div class="px10">Last Updated: 2007-12-09 15:54:48</div><br></div>		</td>
+		</tr>
+		</tbody></table>
+		<br>
+				</td>
+			</tr>
+			<!-- Bottom Gutter -->
+			<tr>
+				<td class="inhgut"></td>
+			</tr>
+			
+			<tr>
+				<td valign="bottom">
+					<table width="100%" valign="bottom">
+					<!-- And our Footer -->
+						<tbody><tr>
+							<td colspan="2" class="footer">&nbsp;</td>
+						</tr>
+						<tr>
+							<td class="footerText">Copyright 2009 by RadioReference.com LLC</td>
+							<td class="footerText" style="text-align: right"><a href="/apps/content/?cid=1">Privacy Policy</a> &nbsp;|&nbsp; <a href="/apps/content/?cid=2">Terms and Conditions</a></td>
+						</tr>
+					</tbody></table>
+				</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+			</tr>
+		</tbody></table>
+		</td>
+		<td rowspan="8" class="rightShadow"></td>
+	</tr>
 </tbody></table>
+</div>
 <!-- Google Analytics -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 _uacct = "UA-68976-1";
 urchinTracker();
 </script>
+<!-- Start Quantcast tag -->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-68CYS6s2Qv4cM"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-68CYS6s2Qv4cM.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
+<div id="dbMenuChild" class="menu"></div>
+<div id="aboutMenuChild" class="menu"></div>
+<div id="wikiMenuChild" class="menu"></div>
+<div id="classMenuChild" class="menu"></div>
+<div id="forumsMenuChild" class="menu"></div>
 
 
-
-</body></html>
+		</body></html>
